fix: mobile nav not showing up

--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ header .nav-item, header .header-btn {
 
 header {
   position: relative;
-  z-index: 3;
+  z-index: 4;
 }
 .header {
   grid-template-areas: 
@@ -450,7 +450,7 @@ header .header-btn {
 
 .hero-img {
   position: relative;
-  z-index: 8;
+  z-index: 3;
 }
 
 @media (min-width: 600px) {
